added Q to literature db

--- a/SPARQLtests.ipynb
+++ b/SPARQLtests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,14 +67,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77\n"
+      "78\n"
      ]
     },
     {
@@ -155,14 +155,6 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>72</th>\n",
-       "      <td>uri</td>\n",
-       "      <td>http://www.wikidata.org/entity/Q65581809</td>\n",
-       "      <td>en</td>\n",
-       "      <td>literal</td>\n",
-       "      <td>Citizen Science Initiative</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>73</th>\n",
        "      <td>uri</td>\n",
        "      <td>http://www.wikidata.org/entity/Q66355439</td>\n",
@@ -194,9 +186,17 @@
        "      <td>literal</td>\n",
        "      <td>The Dutch Great Influenza Survey</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>77</th>\n",
+       "      <td>uri</td>\n",
+       "      <td>http://www.wikidata.org/entity/Q75943273</td>\n",
+       "      <td>en</td>\n",
+       "      <td>literal</td>\n",
+       "      <td>Patient´s Hayfever Diary</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>77 rows × 5 columns</p>\n",
+       "<p>78 rows × 5 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -207,11 +207,11 @@
        "3        uri    http://www.wikidata.org/entity/Q836563                 en   \n",
        "4        uri    http://www.wikidata.org/entity/Q905745                 en   \n",
        "..       ...                                       ...                ...   \n",
-       "72       uri  http://www.wikidata.org/entity/Q65581809                 en   \n",
        "73       uri  http://www.wikidata.org/entity/Q66355439                 en   \n",
        "74       uri  http://www.wikidata.org/entity/Q71633630                 en   \n",
        "75       uri  http://www.wikidata.org/entity/Q73872616                 en   \n",
        "76       uri  http://www.wikidata.org/entity/Q74025745                 en   \n",
+       "77       uri  http://www.wikidata.org/entity/Q75943273                 en   \n",
        "\n",
        "   itemLabel.type                   itemLabel.value  \n",
        "0         literal                      Clickworkers  \n",
@@ -220,16 +220,16 @@
        "3         literal              Christmas Bird Count  \n",
        "4         literal                        Galaxy Zoo  \n",
        "..            ...                               ...  \n",
-       "72        literal        Citizen Science Initiative  \n",
        "73        literal                     GlobalXplorer  \n",
        "74        literal                      Picture Post  \n",
        "75        literal    Massexperimentet Anslagstavlan  \n",
        "76        literal  The Dutch Great Influenza Survey  \n",
+       "77        literal          Patient´s Hayfever Diary  \n",
        "\n",
-       "[77 rows x 5 columns]"
+       "[78 rows x 5 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
