added some translation

--- a/ArcsSystem/locale/sv/LC_MESSAGES/django.po
+++ b/ArcsSystem/locale/sv/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-04-28 08:10+0000\n"
+"POT-Creation-Date: 2020-04-28 09:37+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -24,339 +24,26 @@ msgstr "Engelska"
 
 #: arcs_project/settings.py:215
 msgid "Swedish"
-msgstr ""
+msgstr "Svenska"
 
-#: templates/account/account_inactive.html:5
-#: templates/account/account_inactive.html:8
-msgid "Account Inactive"
-msgstr ""
+#: templates/blog/blog_list.html:7
+msgid "Blog home page (list view)"
+msgstr "Blog hem sida (listvy)"
 
-#: templates/account/account_inactive.html:10
-msgid "This account is inactive."
-msgstr ""
+#: templates/blog/blog_list.html:15
+msgid "Blog detail view"
+msgstr "Blog detaljvy"
 
-#: templates/account/email.html:5
-msgid "Account"
-msgstr ""
+#: templates/blog/blog_list.html:30
+msgid "next"
+msgstr "nästa"
 
-#: templates/account/email.html:23
-msgid "E-mail Addresses"
-msgstr ""
+#: templates/blog/blog_list.html:31
+msgid "last"
+msgstr "sista"
 
-#: templates/account/email.html:27
-msgid "The following e-mail addresses are associated with your account:"
-msgstr ""
+#~ msgid "Confirm"
+#~ msgstr "Bekräfta"
 
-#: templates/account/email.html:58
-msgid "Make Primary"
-msgstr ""
-
-#: templates/account/email.html:59
-msgid "Re-send Verification"
-msgstr ""
-
-#: templates/account/email.html:60 templates/socialaccount/connections.html:35
-msgid "Remove"
-msgstr ""
-
-#: templates/account/email.html:68
-msgid "Warning:"
-msgstr ""
-
-#: templates/account/email.html:68
-msgid ""
-"You currently do not have any e-mail address set up. You should really add "
-"an e-mail address so you can receive notifications, reset your password, etc."
-msgstr ""
-
-#: templates/account/email.html:73
-msgid "Add E-mail Address"
-msgstr ""
-
-#: templates/account/email.html:78
-msgid "Add E-mail"
-msgstr ""
-
-#: templates/account/email.html:88
-msgid "Do you really want to remove the selected e-mail address?"
-msgstr ""
-
-#: templates/account/email/email_confirmation_signup_subject.html:3
-msgid "Confirm Your Registartion - Talkative"
-msgstr ""
-
-#: templates/account/email/password_reset_key_subject.html:3
-msgid "Reset Password talkative"
-msgstr ""
-
-#: templates/account/email_confirm.html:5
-#: templates/account/email_confirm.html:10
-msgid "Confirm E-mail Address"
-msgstr ""
-
-#: templates/account/email_confirm.html:16
-#, python-format
-msgid ""
-" Please confirm that <a href=\"mailto:%(email)s\">%(email)s</a> is an e-mail "
-"address for user %(user_display)s."
-msgstr ""
-
-#: templates/account/email_confirm.html:20
-msgid "Confirm"
-msgstr ""
-
-#: templates/account/email_confirm.html:27
-#, python-format
-msgid ""
-"This e-mail confirmation link expired or is invalid. Please <a href="
-"\"%(email_url)s\">issue a new e-mail confirmation request</a>. You will be "
-"redirected to login page in 5 seconds."
-msgstr ""
-
-#: templates/account/login.html:11 templates/account/login.html:33
-#: templates/account/login.html:46
-msgid "Sign In"
-msgstr ""
-
-#: templates/account/login.html:47
-msgid "Forgot Password ?"
-msgstr ""
-
-#: templates/account/logout.html:5 templates/account/logout.html:10
-#: templates/account/logout.html:23
-msgid "Sign Out"
-msgstr ""
-
-#: templates/account/logout.html:12
-msgid "Are you sure you want to sign out?"
-msgstr ""
-
-#: templates/account/logout.html:24
-msgid "No"
-msgstr ""
-
-#: templates/account/messages/cannot_delete_primary_email.txt:2
-#, python-format
-msgid "You cannot remove your primary e-mail address (%(email)s)."
-msgstr ""
-
-#: templates/account/messages/email_confirmation_sent.txt:2
-#, python-format
-msgid "Confirmation e-mail sent to %(email)s."
-msgstr ""
-
-#: templates/account/messages/email_confirmed.txt:2
-#, python-format
-msgid "You have confirmed %(email)s."
-msgstr ""
-
-#: templates/account/messages/email_deleted.txt:2
-#, python-format
-msgid "Removed e-mail address %(email)s."
-msgstr ""
-
-#: templates/account/messages/logged_in.txt:4
-#, python-format
-msgid "Successfully signed in as %(name)s."
-msgstr ""
-
-#: templates/account/messages/logged_out.txt:2
-msgid "You have signed out."
-msgstr ""
-
-#: templates/account/messages/password_changed.txt:2
-msgid "Password successfully changed."
-msgstr ""
-
-#: templates/account/messages/password_set.txt:2
-msgid "Password successfully set."
-msgstr ""
-
-#: templates/account/messages/primary_email_set.txt:2
-msgid "Primary e-mail address set."
-msgstr ""
-
-#: templates/account/messages/unverified_primary_email.txt:2
-msgid "Your primary e-mail address must be verified."
-msgstr ""
-
-#: templates/account/password_change.html:5
-#: templates/account/password_change.html:27
-#: templates/account/password_change.html:32
-#: templates/account/password_reset_from_key.html:4
-#: templates/account/password_reset_from_key.html:7
-#: templates/account/password_reset_from_key_done.html:4
-#: templates/account/password_reset_from_key_done.html:7
-msgid "Change Password"
-msgstr ""
-
-#: templates/account/password_reset.html:6
-#: templates/account/password_reset.html:16
-#: templates/account/password_reset_done.html:6
-msgid "Password Reset"
-msgstr ""
-
-#: templates/account/password_reset.html:17
-msgid ""
-"Forgotten your password? Enter your e-mail address below, and we'll send you "
-"an e-mail allowing you to reset it."
-msgstr ""
-
-#: templates/account/password_reset.html:22
-msgid "Reset My Password"
-msgstr ""
-
-#: templates/account/password_reset.html:25
-msgid "Please contact us if you have any trouble resetting your password."
-msgstr ""
-
-#: templates/account/password_reset_done.html:11
-msgid "Password Reset Email Sent."
-msgstr ""
-
-#: templates/account/password_reset_from_key.html:7
-msgid "Bad Token"
-msgstr ""
-
-#: templates/account/password_reset_from_key.html:11
-#, python-format
-msgid ""
-"The password reset link was invalid, possibly because it has already been "
-"used.  Please request a <a href=\"%(passwd_reset_url)s\">new password reset</"
-"a>."
-msgstr ""
-
-#: templates/account/password_reset_from_key.html:17
-msgid "change password"
-msgstr ""
-
-#: templates/account/password_reset_from_key.html:20
-#: templates/account/password_reset_from_key_done.html:8
-msgid "Your password is now changed."
-msgstr ""
-
-#: templates/account/password_set.html:5 templates/account/password_set.html:27
-#: templates/account/password_set.html:32
-msgid "Set Password"
-msgstr ""
-
-#: templates/account/signup.html:5 templates/socialaccount/signup.html:5
-msgid "Signup"
-msgstr ""
-
-#: templates/account/signup.html:33 templates/account/signup.html:48
-#: templates/socialaccount/signup.html:8 templates/socialaccount/signup.html:19
-msgid "Sign Up"
-msgstr ""
-
-#: templates/account/signup.html:35
-#, python-format
-msgid ""
-"Already have an account? Then please <a href=\"%(login_url)s\">sign in</a>."
-msgstr ""
-
-#: templates/account/signup_closed.html:5
-#: templates/account/signup_closed.html:8
-msgid "Sign Up Closed"
-msgstr ""
-
-#: templates/account/signup_closed.html:10
-msgid "We are sorry, but the sign up is currently closed."
-msgstr ""
-
-#: templates/account/verification_sent.html:5
-#: templates/account/verification_sent.html:8
-#: templates/account/verified_email_required.html:5
-#: templates/account/verified_email_required.html:8
-msgid "Verify Your E-mail Address"
-msgstr ""
-
-#: templates/account/verification_sent.html:10
-msgid ""
-"We have sent an e-mail to you for verification. Follow the link provided to "
-"finalize the signup process. Please contact us if you do not receive it "
-"within a few minutes."
-msgstr ""
-
-#: templates/account/verified_email_required.html:12
-msgid ""
-"This part of the site requires us to verify that\n"
-"you are who you claim to be. For this purpose, we require that you\n"
-"verify ownership of your e-mail address. "
-msgstr ""
-
-#: templates/account/verified_email_required.html:16
-msgid ""
-"We have sent an e-mail to you for\n"
-"verification. Please click on the link inside this e-mail. Please\n"
-"contact us if you do not receive it within a few minutes."
-msgstr ""
-
-#: templates/account/verified_email_required.html:20
-#, python-format
-msgid ""
-"<strong>Note:</strong> you can still <a href=\"%(email_url)s\">change your e-"
-"mail address</a>."
-msgstr ""
-
-#: templates/socialaccount/authentication_error.html:5
-#: templates/socialaccount/authentication_error.html:8
-msgid "Social Network Login Failure"
-msgstr ""
-
-#: templates/socialaccount/authentication_error.html:10
-msgid ""
-"An error occurred while attempting to login via your social network account."
-msgstr ""
-
-#: templates/socialaccount/connections.html:5
-#: templates/socialaccount/connections.html:8
-msgid "Account Connections"
-msgstr ""
-
-#: templates/socialaccount/connections.html:11
-msgid ""
-"You can sign in to your account using any of the following third party "
-"accounts:"
-msgstr ""
-
-#: templates/socialaccount/connections.html:43
-msgid ""
-"You currently have no social network accounts connected to this account."
-msgstr ""
-
-#: templates/socialaccount/connections.html:46
-msgid "Add a 3rd Party Account"
-msgstr ""
-
-#: templates/socialaccount/login_cancelled.html:5
-#: templates/socialaccount/login_cancelled.html:9
-msgid "Login Cancelled"
-msgstr ""
-
-#: templates/socialaccount/login_cancelled.html:13
-#, python-format
-msgid ""
-"You decided to cancel logging in to our site using one of your existing "
-"accounts. If this was a mistake, please proceed to <a href=\"%(login_url)s"
-"\">sign in</a>."
-msgstr ""
-
-#: templates/socialaccount/messages/account_connected.txt:2
-msgid "The social account has been connected."
-msgstr ""
-
-#: templates/socialaccount/messages/account_connected_other.txt:2
-msgid "The social account is already connected to a different account."
-msgstr ""
-
-#: templates/socialaccount/messages/account_disconnected.txt:2
-msgid "The social account has been disconnected."
-msgstr ""
-
-#: templates/socialaccount/signup.html:10
-#, python-format
-msgid ""
-"You are about to use your %(provider_name)s account to login to\n"
-"%(site_name)s. As a final step, please complete the following form:"
-msgstr ""
+#~ msgid "Change Password"
+#~ msgstr "Ändra lösenord"
