--- a/ArcsSystem/locale/sv/LC_MESSAGES/django.po
+++ b/ArcsSystem/locale/sv/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-05-06 13:40+0000\n"
+"POT-Creation-Date: 2020-05-06 16:24+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -646,6 +646,10 @@ msgid ""
 "You are about to use your %(provider_name)s account to login to\n"
 "%(site_name)s. As a final step, please complete the following form:"
 msgstr ""
+
+#: templates/staticpages/main-page.html:69
+msgid "Get involved with CitSciSE"
+msgstr "Bli involverad i CitSciSE"
 
 #: templates/staticpages/staticpage_list.html:7
 #, fuzzy
