--- a/ArcsSystem/data/publications/csv_to_xml.ipynb
+++ b/ArcsSystem/data/publications/csv_to_xml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "16"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3735,13 +3735,7 @@
       "hurricane mapping\n",
       "veracruz\n",
       "vulnerability and capacity assessment (vca)\n",
-      "citizen science\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "citizen science\n",
       "newtech\n",
       "nottech\n",
       "coastal conservation\n",
@@ -4057,7 +4051,13 @@
       "sustainability\n",
       "tree biology\n",
       "volunteer-based monitoring\n",
-      "data quality\n",
+      "data quality\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "biodiversity monitoring\n",
       "sustainability\n",
       "accuracy\n",
@@ -7740,13 +7740,7 @@
       "crowdsourcing\n",
       "citizen design science\n",
       "citizen participation\n",
-      "crowd creativity\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "crowd creativity\n",
       "participatory planning\n",
       "qua-kit\n",
       "newtech\n",
@@ -8063,7 +8057,13 @@
       "newtech\n",
       "risk assessment\n",
       "extensive risk\n",
-      "fire\n",
+      "fire\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "geospatial technologies\n",
       "low-income settlements\n",
       "newtech\n",
@@ -12245,13 +12245,7 @@
       "biodiversity\n",
       "ecological monitoring\n",
       "newtech\n",
-      "new zealand\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "new zealand\n",
       "habitat restoration\n",
       "nature conservation\n",
       "citizen science\n",
@@ -12662,7 +12656,13 @@
       "citizen science\n",
       "newtech\n",
       "information system\n",
-      "migraine attack database\n",
+      "migraine attack database\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "citizen science\n",
       "newtech\n",
       "fungi\n",
@@ -15369,7 +15369,7 @@
     "    #<field name=\"abstract_sv\" type=\"CharField\">Empty</field>\n",
     "    xmloutputfile.write('''<field name=\"doi\" type=\"CharField\">''' + escape(v[5]) +'''</field>\\n''')\n",
     "    xmloutputfile.write('''<field name=\"py\" type=\"IntegerField\">''' + v[1] + '''</field>\\n''')\n",
-    "    xmloutputfile.write('''<field name=\"authors\" type=\"CharField\">''' + escape(v[0]) + '''Author</field>\\n''')\n",
+    "    xmloutputfile.write('''<field name=\"authors\" type=\"CharField\">''' + escape(v[0]) + '''</field>\\n''')\n",
     "    xmloutputfile.write('''<field name=\"source\" type=\"CharField\">''' + escape(v[2]) + '''</field>\\n''')\n",
     "    xmloutputfile.write('''<field name=\"volume\" type=\"CharField\">''' + v[4] + '''</field>\\n''')\n",
     "    xmloutputfile.write('''<field name=\"issue\" type=\"CharField\">''' + v[3] + '''</field>\\n''')\n",
@@ -15398,7 +15398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15444,7 +15444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
