Remade fixtures to add keywords instead to projects model. Removed keywords from publications.

--- a/ArcsSystem/data/publications/csv_to_xml.ipynb
+++ b/ArcsSystem/data/publications/csv_to_xml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "16"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,18 +77,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "for k, v in keyworddict.items():\n",
-    "    xmloutputfile.write('''<object model=\"publications.keyword\" pk=\"''' + str(v) + '''\">''')\n",
+    "    xmloutputfile.write('''<object model=\"projects.keywordeng\" pk=\"''' + str(v) + '''\">''')\n",
     "    xmloutputfile.write('''   <field name=\"keyword\" type=\"TextField\">''' + escape(k) + '''</field>\\n</object>''')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -3934,13 +3934,7 @@
       "collaborative decision making\n",
       "citizen observatory\n",
       "water governance\n",
-      "environmental action\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "environmental action\n",
       "participatory gis\n",
       "gis\n",
       "low technology\n",
@@ -3969,7 +3963,13 @@
       "data management\n",
       "open data\n",
       "governance\n",
-      "participatory gis\n",
+      "participatory gis\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "data collection\n",
       "gis\n",
       "public participation\n",
@@ -7469,7 +7469,13 @@
       "correlation phenometrics\n",
       "modis-ndvi\n",
       "prism\n",
-      "citizen-sourced data\n",
+      "citizen-sourced data\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "grus japonensis\n",
       "ketupa blakistoni blakistoni\n",
       "occupancy model\n",
@@ -7785,13 +7791,7 @@
       "public participatory gis\n",
       "deliberative workshops\n",
       "impact assessment\n",
-      "national environmental policy act\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "national environmental policy act\n",
       "nepa\n",
       "public lands\n",
       "openstreetmap\n",
@@ -11474,7 +11474,13 @@
       "experimental pragmatics\n",
       "pervasive ubiquitous computing\n",
       "phylogeny\n",
-      "citizen science\n",
+      "citizen science\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "gamification\n",
       "games\n",
       "biomedicine\n",
@@ -12023,13 +12029,7 @@
       "social inclusion\n",
       "infrastructure\n",
       "pedagogy\n",
-      "resilience\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "resilience\n",
       "citizen science\n",
       "motivation\n",
       "informal education\n",
@@ -13214,7 +13214,7 @@
     "    xmloutputfile.write('''<field name=\"volume\" type=\"CharField\">''' + v[4] + '''</field>\\n''')\n",
     "    xmloutputfile.write('''<field name=\"issue\" type=\"CharField\">''' + v[3] + '''</field>\\n''')\n",
     "\n",
-    "    xmloutputfile.write('''<field name=\"keywords\" rel=\"ManyToManyRel\" to=\"publications.keyword\">\\n''')\n",
+    "    xmloutputfile.write('''<field name=\"keywords\" rel=\"ManyToManyRel\" to=\"projects.keywordeng\">\\n''')\n",
     "\n",
     "    for pkvalue in kwlookup(keywordlist):\n",
     "        xmloutputfile.write('''<object pk=\"''' + str(pkvalue) + '''\"></object>\"\\n''')\n",
@@ -13238,7 +13238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
